# autodecode

./: .gitignore  LICENSE  README.md  RESULTS.md  benchmark.py  convert-35b.sh  optimize.py  prepare.py  program.md  pyproject.toml  run_loop.sh  start-mlx-server.sh
docs/: INTEGRATIONS.md  RELEASE_v0.1.0.md
results/: experiments.tsv
scripts/: plot_progress.py
