[project]
name = "autodecode"
version = "0.1.0"
description = "Karpathy-style autonomous inference optimization for Apple Silicon (MLX)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.31.0",
    "mlx-lm>=0.31.0",
]

[project.optional-dependencies]
dev = ["matplotlib>=3.8"]

[tool.uv]
dev-dependencies = ["matplotlib>=3.8"]